* Partway through doing proper packaging; lintian is still complaining   about several issues.
calcStats.cpp: A simple program that reads a peculiar text format and
  calculates statistics.  Obsoleted by mercury-plot, and perl library
  and other things.

lintel-acinclude.in: acinclude constructing script obsolete for ages
  since lintel hasn't been based on autoconf for several years.

debian/*: the new packaging directory, and the initial scripts for all of them.
  Currently based on standard debhelper because we are still trying to support
  lenny.  Not using the old-style format because lenny supports the new style
  one, and squeeze wants it as the default.  Not completely done, but enough
  work has been done that I wanted a checkpoint.

CMakeConfig.txt: use new pod2man setup macro

CMakeLists.txt: properly setup the lintelpthread_abi_version, it will probably
  drift from the lintel one.  Also improve the message about optional
  dependencies.

COPYING: bump date range, it hadn't been updated in ages.  Also fix a word wrap
  glitch.

LintelCMakeUtil.cmake: Add macro to run both install config program and pod2man on it.

LintelFind.cmake: paths option was missing from macro, possible bug.

LintelDocs.cmake: Add sections for the different types of macros.  Make the documentation 
  macros include doxygen in their name since they were doxygen specific.  Add several macros
  and documentation for new support for running pod2man on scripts.  Most of the scripts already
  had documentation in POD format, now we actually generate the manual pages for them.  The
  code to do some of the pod2man is peculiar because I can't figure out how to call a program
  and redirect output correctly in a macro, and because there seems to be a bug with variable
  arguments and if (defined argv#).

Posix.hpp: Add \brief description so the manual pages get a description; will need to add this
  to all the headers to eliminate lintian warnings.

src/CMakeLists.txt: Make sure all the p

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ ENDIF(COMMAND CMAKE_POLICY)
 
 SET(LINTEL_VERSION 0.0)
 SET(LINTEL_ABI_VERSION 0)
+SET(LINTELPTHREAD_ABI_VERSION 0)
 
 SET(CMAKE_MODULE_PATH "${Lintel_SOURCE_DIR}/cmake-modules" ${CMAKE_MODULE_PATH})
 
@@ -38,7 +39,7 @@ ADD_SUBDIRECTORY(cmake-modules)
 IF(LINTEL_FIND_ALL_NOTFOUND)
     MESSAGE("")
     MESSAGE("************************************")
-    MESSAGE("  Some optional dependency was not found.")
+    MESSAGE("  Some optional dependency was not found, see above warning messages.")
     MESSAGE("  ${CMAKE_CURRENT_SOURCE_DIR}/doc/dependencies.txt")
     MESSAGE("  may help identify the right packages")
     MESSAGE("************************************")
