--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -70,8 +70,8 @@ MACRO(LINTEL_SIMPLE_PROGRAM program_name)
   TARGET_LINK_LIBRARIES(${program_name} Lintel)
 ENDMACRO(LINTEL_SIMPLE_PROGRAM)
 
-LINTEL_SIMPLE_PROGRAM(calcStats)
 LINTEL_SIMPLE_PROGRAM(drawRandomLogNormal)
+LINTEL_POD2MAN(drawRandomLogNormal.cpp 1 "Lintel ${LINTEL_VERSION}" "-" drawRandomLogNormal.1)
 
 ################################## PERL MODULES
 
@@ -124,7 +124,7 @@ IF(LIBXML2_ENABLED)
 ENDIF(LIBXML2_ENABLED)
 
 IF(LATEX_ENABLED)
-    LINTEL_INSTALL_CONFIG_PROGRAM(lintel-latex-rebuild)
+    LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(lintel-latex-rebuild 1 "Lintel ${LINTEL_VERSION}")
 ENDIF(LATEX_ENABLED)
 
 IF(BOOST_PROGRAM_OPTIONS_ENABLED)
@@ -146,17 +146,9 @@ ADD_CUSTOM_TARGET(deptool-bootstrap ALL
 
 ADD_LIBRARY(Lintel ${LIBRARY_TYPE} ${LIBLINTEL_SOURCES})
 SET_TARGET_PROPERTIES(Lintel 
-    PROPERTIES VERSION ${LINTEL_VERSION} SONAME ${LINTEL_ABI_VERSION})
+    PROPERTIES VERSION ${LINTEL_VERSION} SOVERSION ${LINTEL_ABI_VERSION})
 
 ################################## CONDITIONAL LIBRARY
-
-IF(THREADS_ENABLED)
-    ADD_LIBRARY(LintelPThread ${LIBRARY_TYPE} ${LIBLINTELPTHREAD_SOURCES})
-    ADD_DEPENDENCIES(LintelPThread Lintel)
-    SET_TARGET_PROPERTIES(LintelPThread
-        PROPERTIES VERSION ${LINTEL_VERSION} SONAME ${LINTEL_ABI_VERSION})
-    TARGET_LINK_LIBRARIES(LintelPThread Lintel ${BOOST_THREAD_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
-ENDIF(THREADS_ENABLED)
 
 IF(LIBXML2_ENABLED)
     TARGET_LINK_LIBRARIES(Lintel ${LIBXML2_LIBRARIES})
@@ -165,6 +157,14 @@ ENDIF(LIBXML2_ENABLED)
 IF(BOOST_PROGRAM_OPTIONS_ENABLED)
     TARGET_LINK_LIBRARIES(Lintel ${BOOST_PROGRAM_OPTIONS_LIBRARIES})
 ENDIF(BOOST_PROGRAM_OPTIONS_ENABLED)
+
+IF(THREADS_ENABLED)
+    ADD_LIBRARY(LintelPThread ${LIBRARY_TYPE} ${LIBLINTELPTHREAD_SOURCES})
+    ADD_DEPENDENCIES(LintelPThread Lintel)
+    SET_TARGET_PROPERTIES(LintelPThread
+        PROPERTIES VERSION ${LINTEL_VERSION} SOVERSION ${LINTELPTHREAD_ABI_VERSION})
+    TARGET_LINK_LIBRARIES(LintelPThread Lintel ${BOOST_THREAD_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+ENDIF(THREADS_ENABLED)
 
 ################################## SUBDIRS
 
@@ -177,27 +177,26 @@ ADD_SUBDIRECTORY(tests)
 
 ################################## INSTALL
 
-INSTALL(TARGETS calcStats drawRandomLogNormal
-	DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+INSTALL(TARGETS drawRandomLogNormal DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 INSTALL(TARGETS Lintel DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 IF(${CMAKE_SYSTEM_NAME} STREQUAL "CYGWIN")
   INSTALL(TARGETS Lintel DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 ENDIF(${CMAKE_SYSTEM_NAME} STREQUAL "CYGWIN")
-LINTEL_INSTALL_CONFIG_PROGRAM(lintel-config)
-LINTEL_INSTALL_CONFIG_PROGRAM(lintel-acinclude)
+LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(lintel-config 1 "Lintel ${LINTEL_VERSION}")
 
 IF(PERL_ENABLED) 
-    LINTEL_INSTALL_CONFIG_PROGRAM(batch-parallel)
-    LINTEL_INSTALL_CONFIG_PROGRAM(deptool)
-    LINTEL_INSTALL_CONFIG_PROGRAM(lintel-flock)
+    LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(batch-parallel 1 "Lintel ${LINTEL_VERSION}")
+    LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(deptool 1 "Lintel ${LINTEL_VERSION}")
+    LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(lintel-flock 1 "Lintel ${LINTEL_VERSION}")
 ENDIF(PERL_ENABLED) 
 
 IF(PERL_ENABLED AND SFDISK_ENABLED AND SGINFO_ENABLED)
-    LINTEL_INSTALL_CONFIG_PROGRAM(lintel-disktool)
+    LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(lintel-disktool 1 "Lintel ${LINTEL_VERSION}")
 ENDIF(PERL_ENABLED AND SFDISK_ENABLED AND SGINFO_ENABLED)
 
 IF(MERCURY_PLOT_ENABLED)
-    LINTEL_INSTALL_CONFIG_PROGRAM(mercury-plot)
+    # explicitly setting the section type to the default to test that LINTEL_POD2MAN works properly.
+    LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(mercury-plot 1 "Lintel ${LINTEL_VERSION}" "User Commands")
 ENDIF(MERCURY_PLOT_ENABLED)
 
 LINTEL_INSTALL_CONFIG_FILE(redhat-rules 
