* Minor fixups to make compilation work with cmake 2.4
LintelDocs.cmake: cmake 2.4 has a different command for file read

debian/rules: add ctest check after build

Lintel.spec.in: add ctest check after build

tests/CMakeLists.txt: pass source dir to mercury-plot.sh test script

mercury-plot.sh: export PERL5LIB so that test can run without prior install

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -91,7 +91,7 @@ IF(BOOST_PROGRAM_OPTIONS_ENABLED)
 ENDIF(BOOST_PROGRAM_OPTIONS_ENABLED)
 
 IF(MERCURY_PLOT_ENABLED)
-    ADD_TEST(mercury-plot ${CMAKE_CURRENT_SOURCE_DIR}/mercury-plot.sh)
+    ADD_TEST(mercury-plot ${CMAKE_CURRENT_SOURCE_DIR}/mercury-plot.sh ${Lintel_SOURCE_DIR}/src)
 ENDIF(MERCURY_PLOT_ENABLED)
 
 ################################### LONGER TESTS
