--- a/debian/rules
+++ b/debian/rules
@@ -22,6 +22,7 @@ build-stamp:  debian/build/config-stamp
 
 	# TODO: remove the -j6, also run tests.
 	(cd debian/build && $(MAKE) -j 6)
+	(cd debian/build && ctest)
 
 	touch $@
 
