--- a/redhat/Lintel.spec.in
+++ b/redhat/Lintel.spec.in
@@ -8,7 +8,7 @@ Source:         %{name}-%{version}.tar.gz
 # TODO: can we have a no-release package?  We'll do a Lintel re-release on packaging glitches
 Release:        __RELEASE__
 Summary:        Support tools and library 
-Group:          Libraries
+Group:          Development/Libraries
 License:        BSD
 Packager:	HPL SSD Software <software@cello.hpl.hp.com>
 BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
@@ -16,7 +16,7 @@ BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 # TODO: do we split shared libraries as in debian?
 %package	libs
 Summary:        Lintel library files
-Group:          Libraries
+Group:          Development/Libraries
 Requires:       %{name}-libs = %{version}-%{release}
 License:        BSD
 
@@ -52,7 +52,8 @@ the actual contents.
 __DESCRIPTION_liblintel-dev__
 
 %description	libs
-The redhat packaging combinds the two Lintel C++ libraries into a single package.
+The redhat packaging combinds the two Lintel C++ libraries into a single
+package.
 
 __DESCRIPTION_liblintel0__
 
@@ -94,23 +95,49 @@ if [ %{_libdir} != /usr/lib ]; then
         mkdir -p $RPM_BUILD_ROOT%{_libdir}
         mv $RPM_BUILD_ROOT/usr/lib/libLintel*so* $RPM_BUILD_ROOT%{_libdir}
 fi
+mkdir -p $RPM_BUILD_ROOT/usr/share/doc/Lintel-devel
+cat >$RPM_BUILD_ROOT/usr/share/doc/Lintel-devel/README <<EOF 
+__DESCRIPTION_liblintel-dev__
+EOF
+
+strip $RPM_BUILD_ROOT/usr/lib/perl5/libLintelPerl.so
+mkdir -p $RPM_BUILD_ROOT/usr/share/doc/perl-Lintel
+cat >$RPM_BUILD_ROOT/usr/share/doc/perl-Lintel/README <<EOF 
+__DESCRIPTION_liblintel-perl__
+EOF
+
+strip $RPM_BUILD_ROOT/usr/bin/drawRandomLogNormal
+mkdir -p $RPM_BUILD_ROOT/usr/share/doc/Lintel-utils
+cat >$RPM_BUILD_ROOT/usr/share/doc/Lintel-utils/README <<EOF 
+__DESCRIPTION_lintel-utils__
+EOF
+
+strip $RPM_BUILD_ROOT/usr/lib64/libLintel*.so.*.*
+
+%post libs -p /sbin/ldconfig
+
+%postun libs -p /sbin/ldconfig
 
 %clean
 rm -rf $RPM_BUILD_ROOT rpm-build
 
+# rpmlint complains about libLintel calling exit(), but that's intentional; 
+# libLintel includes the equivalent of assert().
 %files libs
-%{_libdir}/libLintel.so*
-%{_libdir}/libLintelPThread.so*
+%{_libdir}/libLintel.so.*
+%{_libdir}/libLintelPThread.so.*
 %{_docdir}/Lintel-%{version}/COPYING
 %{_docdir}/Lintel-%{version}/Release.info
 
 %files devel
 %{_includedir}/Lintel/*
 %{_bindir}/lintel-config
+%{_libdir}/libLintel*.so
 /usr/share/cmake-modules
 /usr/share/packaging/redhat-rules
 /usr/share/lintel-latex-rebuild
 /usr/share/Lintel/doxygen.config.in
+/usr/share/doc/Lintel-devel
 
 %files utils
 %{_bindir}/batch-parallel
@@ -121,15 +148,20 @@ rm -rf $RPM_BUILD_ROOT rpm-build
 %{_bindir}/lintel-latex-rebuild
 %{_bindir}/mercury-plot
 /usr/share/bp_modules/BatchParallel
+/usr/share/doc/Lintel-utils
+/usr/share/man/man1/*
 
+# rpmlint complains about the manpages being compressed with gz instead of bz2,
+# but all of the centos5 manpages are compressed with gz
 %files docs
-/usr/share/man
+/usr/share/man/man3/*
 /usr/share/doc/Lintel
 %{_docdir}/Lintel-%{version}/Changelog.mtn
 
 %files -n perl-Lintel
 /usr/lib/perl5
 /usr/share/perl5
+/usr/share/doc/perl-Lintel
 
 %changelog
 
